k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: absensi-frontend
  namespace: test-app
  labels:
    app: absensi-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: absensi-frontend
  template:
    metadata:
      labels:
        app: absensi-frontend
    spec:
      containers:
      - name: frontend
        image: harbor-dt.co.id/devops-apps/frontend:23
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: absensi-frontend-service
  namespace: test-app
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: absensi-frontend
