k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: absensi-ingress
  namespace: absensi-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  # Routing Frontend Kiosk & Dashboard
  - http:
      paths:
      - path: /api/v1
        pathType: Prefix
        backend:
          service:
            name: absensi-backend-service
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: absensi-frontend-service
            port:
              number: 80
